update image file extensions from .jpg to .png in index.html

--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
       <div class="box-container">
         <div class="box">
           <div class="image">
-            <img draggable="false" src="./assets/images/educat/ug.jpg" alt="" />
+            <img draggable="false" src="./assets/images/educat/ug.png" alt="" />
           </div>
           <div class="content">
             <h3>Bachelor of technology (Computer Science and Engineering)</h3>
@@ -237,7 +237,7 @@
           <div class="image">
             <img
               draggable="false"
-              src="./assets/images/educat/12th.jpg"
+              src="./assets/images/educat/12th.png"
               alt=""
             />
           </div>
